# call-of-cthulhu-character-generator

./: .gitignore  CMakeLists.txt  Makefile
headers/characters/: character.h  concrete_investigator_factory.h  investigator.h  investigator_adult.h  investigator_adult_factory.h  investigator_eighties.h  investigator_eighties_factory.h  investigator_factory.h  investigator_fifties.h  investigator_fifties_factory.h  investigator_forties.h  investigator_forties_factory.h  investigator_seventies.h  investigator_seventies_factory.h  investigator_sixties.h  investigator_sixties_factory.h  investigator_teen.h  investigator_teen_factory.h
headers/system/: combat.h
headers/utils/: d10.h  d100.h  d100_factory.h  d10_factory.h  d4.h  d4_factory.h  d6.h  d6_factory.h  dice.h  dice_factory.h  dice_roller.h  rng.h
src/: main.cc
src/characters/: character.cc  concrete_investigator_factory.cc  investigator.cc  investigator_adult.cc  investigator_adult_factory.cc  investigator_eighties.cc  investigator_eighties_factory.cc  investigator_fifties.cc  investigator_fifties_factory.cc  investigator_forties.cc  investigator_forties_factory.cc  investigator_seventies.cc  investigator_seventies_factory.cc  investigator_sixties.cc  investigator_sixties_factory.cc  investigator_teen.cc  investigator_teen_factory.cc
src/utils/: d10.cc  d100.cc  d100_factory.cc  d10_factory.cc  d4.cc  d4_factory.cc  d6.cc  d6_factory.cc  dice_factory.cc  dice_roller.cc  rng.cc
tests/: test.cc
tests/characters/: factory_test.cc  investigator_test.cc
tests/utils/: dice_roller_test.cc
